# Version History

## unreleased
* MCCS-180 - updated power management, new subrack device, MccsController.Startup()
* MCCS-317 - Basic Abort and ObsReset implementation
* MCCS-361 - robust device connection
* MCCS-320 - deployment bugfixes and move to hyphenated make targets
* MCCS-251 - Software control of physical Tile Processing Board
* MCCS-350 - Set commandResult to UNKNOWN before MccsController commands are executed
* MCCS-272 - SubArrayBeam device - implement stub device

## 0.5.0 
* MCCS-169 - Add configure to subarray
* MCCS-313 - MCCS Tile WebJive pages
* MCCS-325 - minikube and WebJive setup
* MCCS-162 - SubArray device: add resource management
* MCCS-322 - Improve xray_report job stability
* MCCS-306 - Document flow and control of power
* MCCS-331 - update dependencies for new ska-docker images
* MCCS-242 - Test harness refactor
* MCCS-331 - Don't assume pytango is numpy-enabled

## 0.4.0 
* MCCS-208 - re-enable webjive chart
* MCCS-237 - device subpackages
* MCCS-240 - allow deviceserver overrides
* MCCS-225 - further work on hardware model, especially antenna
* MCCS-162 - Subarray resource management model

## 0.3.0 

* MCCS-156 - controller resource management model
* MCCS-225 - hardware model
* MCCS-207 - refactor helm charts to use tango-util

## 0.2.1 

* MCCS-227 - address segfaults

## 0.2.0

test release - to verify MCCS-209

## 0.1.2

Update to lmc-base-classes version 0.6.1

## 0.1.1

Patch release to create versioned docker image

## 0.1.0

Initial release

* control model hierachy of MCCS LMC Tango device classes
* cli tools for _master_ and _tile_
* tox environment
* k8s helm chart for tango device containers